syntax = "proto2";

package deephi;

message QuantizeParameter {
  repeated string ignore_layer = 1;
}
